Components created with Styles

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -12,7 +12,7 @@
         <a href="#">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ducimus, praesentium recusandae asperiores
                 officiis assumenda? Hic omnis sequi repudiandae vitae porro ducimus. Vero, repudiandae beatae! Sequi error
-                quidem reprehenderit neque?</p>
+                quidem reprehenderit neque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ducimus? Non magni sit sint repellat corrupti nisi molestiae ex, maiores, ducimus voluptatem fugiat culpa illum laudantium in, commodi sed quisquam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque unde, vero velit minima, aut itaque magni totam ex repellat perferendis earum est ab fuga reprehenderit eos sed enim soluta! Doloremque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptas facere quos alias ipsa atque, blanditiis quaerat. Quae soluta facilis atque sed. Eius voluptates dignissimos excepturi porro, rerum magnam veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum fugiat officiis voluptatem est dolor fugit nulla suscipit ex quo impedit, aspernatur minima? Voluptatum dignissimos voluptas soluta voluptatibus fugiat culpa aut.</p>
         </a>
     </div>
 </div>
