--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,9 @@
-<p>menu-bar works!</p>
+<div class="menu-bar__container">
+    <ul>
+        <li><a href="https://www.linkedin.com/in/lsouzadev04/" target="_blank">Linkedin</a></li>
+        <li><span>•</span></li>
+        <li><a href="https://github.com/lsouza-dev" target="_blank">Github</a></li>
+        <li><span>•</span></li>
+        <li><a href="https://lsouza-dev.github.io/cv" target="_blank">Curriculo</a></li>
+    </ul>
+</div>
