--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,14 @@
+<header>
+    <menu-bar></menu-bar>
+</header>
 <menu-title></menu-title>
-<div class="articles">
+<div class="articles__container">
     <div class="articles__main">
         <big-card></big-card>
     </div>
     <div class="articles__others">
-        <!-- <small-card></small-card> -->
+        <small-card></small-card>
+        <small-card></small-card>
+        <small-card></small-card>
     </div>
 </div>
