--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,31 +1,40 @@
 .big-card__container{
-    border: solid white 2px;
-    width: 400px;
-    height: 520px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
     gap: 1rem;
-    padding: 1rem 1rem 0;
+    padding: 0 2rem;
+    height: 558px;
 }
 
 .big-card__title{
-    font-size: .8rem;
+    font-size: 1rem;
+}
+
+.big-card__description{
+    height: 125px;
 }
 
 .big-card__description p{
-    font-size: 0.75rem;
+    font-size: 1rem;
     color: grey;
+    
+}
+
+.big-card__description{
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 9;
+    height: 190px;
 }
 
 .big-card__photo{
-    height: 200px;
     width: 100%;
     border-radius: .5rem;
 }
 
 .big-card__photo img{
-    min-width: 100%;
-    height: 100%;
+    width: 100%;
+    height: 250px;
 }
