--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -5,9 +5,7 @@
                 alt="">
         </div>
         <div class="small-card__title">
-            <a href="#">
-                <h1>{{cardTitle}}</h1>
-            </a>
+            <h1><a [routerLink]="['content',id]">{{cardTitle}}</a></h1>
         </div>
     </div>
     <div class="small-card__container__separator">
